--- a/.github/workflows/deploy_prd.yml
+++ b/.github/workflows/deploy_prd.yml
@@ -34,6 +34,16 @@ jobs:
         uses: actions/checkout@main
         with:
           ref: ${{ github.head_ref }}
+      - id: vars
+        name: Retreive Image ID
+        run: |
+          SHA=$(git rev-parse HEAD^2)
+          echo "::set-output name=sha::$SHA"
+      - name: Retag Image
+        shell: bash
+        run: |
+          docker tag gcr.io/badger-finance/${{github.event.repository.name}}:${{ steps.vars.outputs.sha }} ${{ env.TAG_IMAGE_NAME }}
+          docker image push ${{ env.TAG_IMAGE_NAME }}
       - name: Checkout Manifest Repository
         shell: bash
         run: |
@@ -77,7 +87,7 @@ jobs:
           mkdir -p manifests/${{ github.event.repository.name }}/
           echo "Kustomize Manifest and Replace with SHA"
           ./kustomize build ./.deploy/${{ env.TARGET_ENVIRONMENT }} |
-          sed "s/COMMIT_SHA/${{ github.event.pull_request.head.sha }}/g" \
+          sed "s/COMMIT_SHA/${{ GITHUB_REF##*/ }}/g" \
           > manifests/${{ github.event.repository.name }}/manifest.yaml
       - name: Commit and Push New Manifest
         shell: bash
@@ -87,7 +97,7 @@ jobs:
           git config --local user.email "github@badger-finance.com"
           git config --local user.name "${{ github.actor }}"
           git add ${{ github.event.repository.name }} applications/
-          git commit -m "Deploying ${{ github.event.repository.name }}:${{ github.event.pull_request.head.sha }}" || echo "¯\_(ツ)_/¯ Nothing changed, so nothing committed, and nothing new will be pushed to manifests."
+          git commit -m "Deploying ${{ github.event.repository.name }}:${{ GITHUB_REF##*/ }}" || echo "¯\_(ツ)_/¯ Nothing changed, so nothing committed, and nothing new will be pushed to manifests."
           echo "Push New Manifest"
           git push https://${{github.actor}}:${{secrets.GH_TOKEN}}@github.com/${{ env.MANIFEST_RESPOSITORY }}.git HEAD:${{env.TARGET_ENVIRONMENT}}
 
