--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -112,7 +112,7 @@ jobs:
   notify:
     name: Notify Chat
     if: always()
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     needs: [deploy-dev]
     steps:
     - name: Discord notification
