--- a/.github/workflows/deploy_prd.yml
+++ b/.github/workflows/deploy_prd.yml
@@ -105,7 +105,7 @@ jobs:
   notify:
     name: Notify Chat
     if: always()
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     needs: [deploy-prd]
     steps:
     - name: Discord notification
