--- a/.deploy/base/deployment.yml
+++ b/.deploy/base/deployment.yml
@@ -16,10 +16,8 @@ spec:
     spec:
       containers:
         - name: badger-price-bot
-          image: gcr.io/badger-finance/price_bots:COMMIT_SHA
+          image: ecr.io/badger-finance/price_bots:COMMIT_SHA
           imagePullPolicy: IfNotPresent
-          ports:
-            - containerPort: 8000
           env:
             - name: LOG_LEVEL
               value: 'info'
