--- a/.deploy/base/badger.yaml
+++ b/.deploy/base/badger.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: badger-price-bot
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: badger-price-bot
@@ -16,6 +16,9 @@ spec:
     spec:
       containers:
         - name: badger-price-bot
+          image: ecr.io/badger/price-bots:COMMIT_SHA
+          imagePullPolicy: IfNotPresent
+          command: ["python scripts/run_badger_bot.py"]
           env:
             - name: LOG_LEVEL
               value: 'info'
