--- a/.deploy/base/digg.yaml
+++ b/.deploy/base/digg.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: digg-price-bot
-          image: ecr.io/badger/price-bots:COMMIT_SHA
+          image: IMAGE_NAME
           imagePullPolicy: IfNotPresent
           command: ["python scripts/run_digg_bot.py"]
           env:
