--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -10,7 +10,7 @@ on:
 env:
   TARGET_ENVIRONMENT: 'dev'
   MANIFEST_RESPOSITORY: 'badger-finance/badger-kube-manifests'
-  IMAGE_NAME: 'ecr.io/badger-finance/${{github.event.repository.name}}:${{ github.event.pull_request.head.sha }}'
+  IMAGE_NAME: '${{ steps.login-ecr.outputs.registry }}/badger/${{github.event.repository.name}}:${{ github.event.pull_request.head.sha }}'
 
 jobs:
   build:
@@ -29,13 +29,9 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
       - name: Build, tag, and push image to Amazon ECR
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: badger/${{ github.event.repository.name }}
-          IMAGE_TAG: ${{ github.event.pull_request.head.sha }}
         run: |
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          docker build -t ${{ env.IMAGE_NAME }} .
+          docker push ${{ env.IMAGE_NAME }}
 
   validate_manifest:
     name: Run Manifest Validation
@@ -100,7 +96,7 @@ jobs:
           mkdir -p manifests/${{ github.event.repository.name }}/
           echo "Kustomize Manifest and Replace with SHA"
           ./kustomize build ./.deploy/${{ env.TARGET_ENVIRONMENT }} |
-          sed "s/COMMIT_SHA/${{ github.event.pull_request.head.sha }}/g" \
+          sed "s/IMAGE_NAME/${{ env.IMAGE_NAME }}/g" \
           > manifests/${{ github.event.repository.name }}/manifest.yaml
       - name: Commit and Push New Manifest
         shell: bash
