set env vars for non sensitive env values in deploy scripts

--- a/.deploy/base/badger.yaml
+++ b/.deploy/base/badger.yaml
@@ -22,3 +22,5 @@ spec:
           env:
             - name: LOG_LEVEL
               value: 'info'
+            - name: BOT_ID_BADGER
+              value: '835249232398254130'
