--- a/.deploy/base/bdigg.yaml
+++ b/.deploy/base/bdigg.yaml
@@ -22,3 +22,7 @@ spec:
           env:
             - name: LOG_LEVEL
               value: 'info'
+            - name: BDIGG_ADDRESS
+              value: '0x7e7E112A68d8D2E221E11047a72fFC1065c38e1a'
+            - name: BOT_ID_BDIGG
+              value: '835277400002002985'
