--- a/.deploy/base/digg.yaml
+++ b/.deploy/base/digg.yaml
@@ -22,3 +22,7 @@ spec:
           env:
             - name: LOG_LEVEL
               value: 'info'
+            - name: DIGG_ADDRESS
+              value: '0x798d1be841a82a273720ce31c822c61a67a601c3'
+            - name: BOT_ID_DIGG
+              value: '835276963668819998'
