--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -97,7 +97,7 @@ jobs:
           mkdir -p manifests/${{ github.event.repository.name }}/
           echo "Kustomize Manifest and Replace with SHA"
           ./kustomize build ./.deploy/${{ env.TARGET_ENVIRONMENT }} |
-          sed "s/IMAGE_NAME/${{ steps.login-ecr.outputs.registry }}${{ env.IMAGE_NAME }}/g" \
+          sed --expression "s@IMAGE_NAME@${{ steps.login-ecr.outputs.registry }}${{ env.IMAGE_NAME }}@g" \
           > manifests/${{ github.event.repository.name }}/manifest.yaml
       - name: Commit and Push New Manifest
         shell: bash
