--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -49,6 +49,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build, validate_manifest]
     steps:
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
       - name: Checkout Service
         uses: actions/checkout@main
         with:
