--- a/.deploy/base/ibbtc.yaml
+++ b/.deploy/base/ibbtc.yaml
@@ -18,7 +18,7 @@ spec:
         - name: ibbtc-price-bot
           image: IMAGE_NAME
           imagePullPolicy: IfNotPresent
-          command: ["python scripts/run_ibbtc_bot.py"]
+          command: ["python", "scripts/run_ibbtc_bot.py"]
           env:
             - name: LOG_LEVEL
               value: 'info'
