--- a/.deploy/base/badger.yaml
+++ b/.deploy/base/badger.yaml
@@ -24,3 +24,5 @@ spec:
               value: 'info'
             - name: BOT_ID_BADGER
               value: '835249232398254130'
+            - name: ASSUME_ROLE_ARN
+              value: 'arn:aws:iam::342684350154:policy/badger-price-bot-sm'
