--- a/.deploy/base/service_account.yaml
+++ b/.deploy/base/service_account.yaml
@@ -5,31 +5,31 @@ metadata:
   annotations:
     eks.amazonaws.com/role-arn: arn:aws:iam::342684350154:oidc-provider/oidc.eks.us-west-1.amazonaws.com/id/8C6B2B2B3F79C7B75BF49A812889DE85
 ---
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-    name: bbadger-price-bot
-    annotations:
-    eks.amazonaws.com/role-arn: ARN_OF_ABOVE_IAM_ROLE
----
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-    name: digg-price-bot
-    annotations:
-    eks.amazonaws.com/role-arn: ARN_OF_ABOVE_IAM_ROLE
----
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-    name: bdigg-price-bot
-    annotations:
-    eks.amazonaws.com/role-arn: ARN_OF_ABOVE_IAM_ROLE
----
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-    name: ibbtc-price-bot
-    annotations:
-    eks.amazonaws.com/role-arn: ARN_OF_ABOVE_IAM_ROLE
----
+# apiVersion: v1
+# kind: ServiceAccount
+# metadata:
+#     name: bbadger-price-bot
+#     annotations:
+#     eks.amazonaws.com/role-arn: ARN_OF_ABOVE_IAM_ROLE
+# ---
+# apiVersion: v1
+# kind: ServiceAccount
+# metadata:
+#     name: digg-price-bot
+#     annotations:
+#     eks.amazonaws.com/role-arn: ARN_OF_ABOVE_IAM_ROLE
+# ---
+# apiVersion: v1
+# kind: ServiceAccount
+# metadata:
+#     name: bdigg-price-bot
+#     annotations:
+#     eks.amazonaws.com/role-arn: ARN_OF_ABOVE_IAM_ROLE
+# ---
+# apiVersion: v1
+# kind: ServiceAccount
+# metadata:
+#     name: ibbtc-price-bot
+#     annotations:
+#     eks.amazonaws.com/role-arn: ARN_OF_ABOVE_IAM_ROLE
+# ---
