--- a/.deploy/base/badger.yaml
+++ b/.deploy/base/badger.yaml
@@ -14,6 +14,7 @@ spec:
       labels:
         app: badger-price-bot
     spec:
+      serviceAccountName: badger-price-bot
       containers:
         - name: badger-price-bot
           image: IMAGE_NAME
