create service accounts, update deploy scripts for other bots k8s

--- a/.deploy/base/ibbtc.yaml
+++ b/.deploy/base/ibbtc.yaml
@@ -14,6 +14,7 @@ spec:
       labels:
         app: ibbtc-price-bot
     spec:
+      serviceAccountName: ibbtc-price-bot
       containers:
         - name: ibbtc-price-bot
           image: IMAGE_NAME
