--- a/.deploy/base/bbadger.yaml
+++ b/.deploy/base/bbadger.yaml
@@ -14,6 +14,7 @@ spec:
       labels:
         app: bbadger-price-bot
     spec:
+      serviceAccountName: bbadger-price-bot
       containers:
         - name: bbadger-price-bot
           image: IMAGE_NAME
