--- a/.deploy/base/bdigg.yaml
+++ b/.deploy/base/bdigg.yaml
@@ -14,6 +14,7 @@ spec:
       labels:
         app: bdigg-price-bot
     spec:
+      serviceAccountName: bdigg-price-bot
       containers:
         - name: bdigg-price-bot
           image: IMAGE_NAME
