--- a/.deploy/base/digg.yaml
+++ b/.deploy/base/digg.yaml
@@ -14,6 +14,7 @@ spec:
       labels:
         app: digg-price-bot
     spec:
+      serviceAccountName: digg-price-bot
       containers:
         - name: digg-price-bot
           image: IMAGE_NAME
