add for prd too

--- a/.github/workflows/deploy_prd.yml
+++ b/.github/workflows/deploy_prd.yml
@@ -101,16 +101,14 @@ jobs:
           echo "Push New Manifest"
           git push https://${{github.actor}}:${{secrets.GH_TOKEN}}@github.com/${{ env.MANIFEST_RESPOSITORY }}.git HEAD:${{env.TARGET_ENVIRONMENT}}
 
-
   notify:
     name: Notify Chat
     if: always()
     runs-on: ubuntu-latest
-    needs: [deploy-prd]
+    needs: [deploy-dev]
     steps:
-    - name: Discord notification
-      env:
-        DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
-      uses: Ilshidur/action-discord@master
+    - name: Send status to Discord
+      uses: nebularg/actions-discord-webhook@v1
       with:
-        args: '${{github.event.repository.name}} has been deployed to ${{ env.TARGET_ENVIRONMENT }}.'
+        webhook_url: ${{ secrets.DISCORD_WEBHOOK }}
+        status: ${{ job.status }}
