--- a/.github/workflows/deploy_prd.yml
+++ b/.github/workflows/deploy_prd.yml
@@ -105,7 +105,7 @@ jobs:
     name: Notify Chat
     if: always()
     runs-on: ubuntu-latest
-    needs: [deploy-dev]
+    needs: [deploy-prd]
     steps:
     - name: Send status to Discord
       uses: nebularg/actions-discord-webhook@v1
