point at the right repo, docs lie

--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -125,6 +125,6 @@ jobs:
     needs: [deploy-dev]
     steps:
     - name: Send status to Discord
-      uses: johnnyhuy/discord-webhook@main
+      uses: johnnyhuy/actions-discord-git-webhook@v0.0.1
       with:
         webhook_url: ${{ secrets.DISCORD_WEBHOOK }}
