fix: give jwt proper perms for aws action

--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -3,6 +3,10 @@ on:
   pull_request:
     branches:
       - main
+      
+permissions:
+  id-token: write
+  contents: read
 
 env:
   TARGET_ENVIRONMENT: 'dev'
