--- a/.deploy/base/service_account.yaml
+++ b/.deploy/base/service_account.yaml
@@ -33,3 +33,10 @@ metadata:
   annotations:
     eks.amazonaws.com/role-arn: arn:aws:iam::342684350154:role/ibbtc-price-bot
 ---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: graviaura-price-bot
+  annotations:
+    eks.amazonaws.com/role-arn: arn:aws:iam::342684350154:role/graviaura-price-bot
+---
